--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,17 @@
+.navbar {
+  font-family: 'Montserrat', sans-serif;
+  margin-top: 3em;
+  border: none;
+}
+
 .navbar-brand {
-  /* font-family: Merriweather; */
+  font-weight: 800;
+  font-size: 1.5em;
+  letter-spacing: 3px;
+  margin-right: 10px;
+}
+
+.nav-link {
+  font-size: 1.25em;
+  font-weight: 400;
 }
