--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .navbar {
   font-family: 'Montserrat', sans-serif;
-  margin-top: 3em;
+  /* margin-top: 3em; */
   border: none;
+  background-color: white;
 }
 
 .navbar-brand {
