--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,3 +16,13 @@
   font-size: 1.25em;
   font-weight: 400;
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  text-decoration: none;
+}
